// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/ContactsField addSuggestedContacts() should match suggested collaborators but not duplicate 1`] = `
Array [
  Object {
    "email": "ddd@box.com",
    "id": "567",
    "name": "unmatched",
    "text": "unmatched",
    "type": "user",
    "value": "ddd@box.com",
  },
  Object {
    "email": "ccc@box.com",
    "id": "345",
    "name": "person conclude",
    "text": "person conclude",
    "type": "user",
    "value": "ccc@box.com",
  },
  Object {
    "email": "bbb@box.com",
    "id": "234",
    "name": "person belong",
    "text": "person belong",
    "type": "user",
    "value": "bbb@box.com",
  },
  Object {
    "email": "aaa@box.com",
    "id": "123",
    "name": "person alright",
    "userScore": 0.5,
  },
]
`;

exports[`features/unified-share-modal/ContactsField addSuggestedContacts() should match suggested collaborators by email alias 1`] = `
Array [
  Object {
    "email": "bbb@box.com",
    "id": "234",
    "name": "person belong",
    "text": "person belong",
    "type": "user",
    "value": "bbb@box.com",
  },
]
`;

exports[`features/unified-share-modal/ContactsField addSuggestedContacts() should match suggested collaborators even when options are empty if a search matches 1`] = `
Array [
  Object {
    "email": "ccc@box.com",
    "id": "345",
    "name": "person conclude",
    "text": "person conclude",
    "type": "user",
    "value": "ccc@box.com",
  },
  Object {
    "email": "bbb@box.com",
    "id": "234",
    "name": "person belong",
    "text": "person belong",
    "type": "user",
    "value": "bbb@box.com",
  },
  Object {
    "email": "aaa@box.com",
    "id": "123",
    "name": "person alright",
    "text": "person alright",
    "type": "user",
    "value": "aaa@box.com",
  },
]
`;

exports[`features/unified-share-modal/ContactsField addSuggestedContacts() should match suggested collaborators full name 1`] = `
Array [
  Object {
    "email": "aaa@box.com",
    "id": "123",
    "name": "person alright",
    "text": "person alright",
    "type": "user",
    "value": "aaa@box.com",
  },
]
`;

exports[`features/unified-share-modal/ContactsField addSuggestedContacts() should match suggested collaborators full names no spaces 1`] = `
Array [
  Object {
    "email": "aaa@box.com",
    "id": "123",
    "name": "person alright",
    "text": "person alright",
    "type": "user",
    "value": "aaa@box.com",
  },
]
`;

exports[`features/unified-share-modal/ContactsField addSuggestedContacts() should match suggested collaborators last names 1`] = `
Array [
  Object {
    "email": "aaa@box.com",
    "id": "123",
    "name": "person alright",
    "text": "person alright",
    "type": "user",
    "value": "aaa@box.com",
  },
]
`;

exports[`features/unified-share-modal/ContactsField addSuggestedContacts() should order the suggested selectorOptions by userScore 1`] = `
Array [
  Object {
    "email": "ddd@box.com",
    "id": "567",
    "name": "unmatched",
    "text": "unmatched",
    "type": "user",
    "value": "ddd@box.com",
  },
  Object {
    "email": "ccc@box.com",
    "id": "345",
    "name": "person conclude",
    "text": "person conclude",
    "type": "user",
    "value": "ccc@box.com",
  },
  Object {
    "email": "bbb@box.com",
    "id": "234",
    "name": "person belong",
    "text": "person belong",
    "type": "user",
    "value": "bbb@box.com",
  },
  Object {
    "email": "aaa@box.com",
    "id": "123",
    "name": "person alright",
    "userScore": 0.5,
  },
]
`;

exports[`features/unified-share-modal/ContactsField addSuggestedContacts() should prioritize matches from the service over fuzzy matches 1`] = `
Array [
  Object {
    "email": "aaa@box.com",
    "id": "123",
    "name": "person alright",
    "text": "person alright",
    "type": "user",
    "value": "aaa@box.com",
  },
  Object {
    "email": "ccc@box.com",
    "id": "345",
    "name": "person conclude",
    "text": "person conclude",
    "type": "user",
    "value": "ccc@box.com",
  },
  Object {
    "email": "bbb@box.com",
    "id": "234",
    "name": "person belong",
    "text": "person belong",
    "type": "user",
    "value": "bbb@box.com",
  },
]
`;

exports[`features/unified-share-modal/ContactsField render should have scrollable dropdown if contacts > 5 1`] = `
<PillSelectorDropdown
  allowCustomPills={true}
  className="scrollable"
  disabled={false}
  error=""
  inputProps={
    Object {
      "autoFocus": true,
      "onChange": [Function],
    }
  }
  label={
    <FormattedMessage
      defaultMessage="Invite People"
      id="boxui.unifiedShare.inviteFieldLabel"
    />
  }
  onInput={[Function]}
  onRemove={[MockFunction]}
  onSelect={[MockFunction]}
  parseItems={[Function]}
  placeholder=""
  selectedOptions={Array []}
  selectorOptions={
    Array [
      Object {
        "email": "x@example.com",
        "id": "12345",
        "name": "X User",
        "text": "X User",
        "type": "group",
        "value": "x@example.com",
      },
      Object {
        "email": "y@example.com",
        "id": "23456",
        "name": "Y User",
        "text": "Y User",
        "type": "user",
        "value": "y@example.com",
      },
      Object {
        "email": "z@example.com",
        "id": "34567",
        "name": "Z User",
        "text": "Z User",
        "type": "user",
        "value": "z@example.com",
      },
      Object {
        "email": "a@example.com",
        "id": "12",
        "name": "a b",
        "text": "a b",
        "type": "user",
        "value": "a@example.com",
      },
      Object {
        "email": "b@example.com",
        "id": "13",
        "name": "a b",
        "text": "a b",
        "type": "user",
        "value": "b@example.com",
      },
      Object {
        "email": "c@example.com",
        "id": "14",
        "name": "a c",
        "text": "a c",
        "type": "user",
        "value": "c@example.com",
      },
      Object {
        "email": "d@example.com",
        "id": "14",
        "name": "a d",
        "text": "a d",
        "type": "user",
        "value": "d@example.com",
      },
      Object {
        "email": "e@example.com",
        "id": "14",
        "name": "a e",
        "text": "a e",
        "type": "user",
        "value": "e@example.com",
      },
    ]
  }
  validateForError={[MockFunction]}
  validator={[MockFunction]}
>
  <ContactDatalistItem
    key="12345"
    name="X User"
    subtitle="x@example.com"
  />
  <ContactDatalistItem
    key="23456"
    name="Y User"
    subtitle="y@example.com"
  />
  <ContactDatalistItem
    key="34567"
    name="Z User"
    subtitle="z@example.com"
  />
  <ContactDatalistItem
    key="12"
    name="a b"
    subtitle="a@example.com"
  />
  <ContactDatalistItem
    key="13"
    name="a b"
    subtitle="b@example.com"
  />
  <ContactDatalistItem
    key="14"
    name="a c"
    subtitle="c@example.com"
  />
  <ContactDatalistItem
    key="14"
    name="a d"
    subtitle="d@example.com"
  />
  <ContactDatalistItem
    key="14"
    name="a e"
    subtitle="e@example.com"
  />
</PillSelectorDropdown>
`;

exports[`features/unified-share-modal/ContactsField render should render default component 1`] = `
<PillSelectorDropdown
  allowCustomPills={true}
  className=""
  disabled={false}
  error=""
  inputProps={
    Object {
      "autoFocus": true,
      "onChange": [Function],
    }
  }
  label={
    <FormattedMessage
      defaultMessage="Invite People"
      id="boxui.unifiedShare.inviteFieldLabel"
    />
  }
  onInput={[Function]}
  onRemove={[MockFunction]}
  onSelect={[MockFunction]}
  parseItems={[Function]}
  placeholder=""
  selectedOptions={
    Array [
      Object {
        "email": "x@example.com",
        "id": "12345",
        "name": "X User",
        "text": "X User",
        "type": "group",
        "value": "x@example.com",
      },
      Object {
        "email": "y@example.com",
        "id": "23456",
        "name": "Y User",
        "text": "Y User",
        "type": "user",
        "value": "y@example.com",
      },
      Object {
        "email": "z@example.com",
        "id": "34567",
        "name": "Z User",
        "text": "Z User",
        "type": "user",
        "value": "z@example.com",
      },
    ]
  }
  selectorOptions={Array []}
  validateForError={[MockFunction]}
  validator={[MockFunction]}
/>
`;
